# online_mart

./: compose.yaml  kong_gateway_startup.sh
inventory-service/: .env  Dockerfile.dev
inventory-service/app/: settings.py
inventory_service/: .env  pyproject.toml
inventory_service/app/: main.py  settings.py
inventory_service/app/crud/: inventory_crud.py
inventory_service/app/kafka/: producer.py
inventory_service/app/kafka/consumers/: inventory_consumer.py
inventory_service/app/kafka/producers/: inventory_producer.py  inventory_response_producer.py
inventory_service/app/models/: inventory_model.py  product_model.py
inventory_service/app/protobuf/: inventory.proto
notification-service/: .env  Dockerfile.dev
notification-service/app/: settings.py
notification_service/: .env  Dockerfile.dev
notification_service/app/: main.py  settings.py
order-service/: Dockerfile.dev
order-service/app/: deps.py  settings.py
order_service/: .env  Dockerfile.dev
order_service/app/: main.py  settings.py
order_service1/app/: deps.py
payment-service/: Dockerfile.dev
payment-service/app/: settings.py
payment_service/: .env
product-service/: .env  Dockerfile.dev
product_service/: .env  env_backup  pyproject.toml
todo/: .env
user-service/: .env  Dockerfile.dev  pyproject.toml
user-service/app/: auth.py  main.py  settings.py
user-service/app/crud/: user_crud.py
user-service/app/kafka/consumers/: user_consumer.py
user-service/app/kong/: create_kong_consumer.py
user-service/app/models/: user_model.py
user_service/: .env  Dockerfile.dev
(+80 files in other folders)
