[tool.poetry]
name = "online-mart"
version = "0.1.0"
description = ""
authors = ["MuhammadAmmar24 <jazba685@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.19"
aiokafka = "^0.11.0"
protobuf = "^5.27.2"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
